@startuml
skinparam classAttributeIconSize 0

class Schuelerverwaltung{
 -schueler : Schueler
 -angemeldet : boolean
 + Schuelerverwaltung ()
 + anmeldung() : void
 - anmeldung(pPassword : String) : void
 + abmeldung() : void
 + zeigeMenue() : void
}



class MenueFuehrung{
 +MenueFuehrung()
}

class Person{
 -vorname: String
 -nachname: String
 -alter : int
 +setVorname(pName : String) : void
 +setNachname(pName : String) : void
 +getVorname() : String
 +getNachname() : String
 +setAlter(pAlter : int) : void
 +getAlter() : int
}



class Fach{
 -name : String
 +getName(): String
 +setName(pName : String) : void
}

class Note{
 -note: int
 -jahr : int
 +Note(pNote : int, pJahr : int)
 +getNote(): String
 +setNote(pNote : int) : void
 +getJahr(): String
 +setJahr(pNote : int) : void
}




class Schueler{
  -passwort : String
  +ueberpruefePassword(pPassword : String): boolean
  +setPassword(pPassword : String) : void
}


Fach "1" *-- "0..10" Note
Schuelerverwaltung  *-- "1" MenueFuehrung
Schueler "1" *-- "0..10" Fach
Schueler <|-- Person

@enduml
